--- a/src/main/resources/html_css_js/style.css
+++ b/src/main/resources/html_css_js/style.css
@@ -1,3 +1,11 @@
 label {
     color:red;
 }
+
+#passwordConfirmInput {
+    background-color: yellow;
+}
+
+.label.tableItems {
+    color: green;
+}
